--- a/main.css
+++ b/main.css
@@ -4,9 +4,10 @@ html, body {
 }
 
 footer {
-    margin-top: 100px;
+    margin-top: 98%;
     align-content: center;
     text-align: center;
+    opacity: 0.5;
 }
 
 body {
@@ -56,7 +57,7 @@ body {
     min-width: 100px;
 }
 
-#gold {
+#gold, #gps {
     position: absolute;
     left: 0px;
     top: 10%;
@@ -66,4 +67,18 @@ body {
     background: #000;
     background: rgba(0, 0, 0, 0.4);
     padding: 2px 0px;
+}
+
+#gps {
+    top: 11.7%;
+}
+
+#version {
+    position: absolute;
+	left: 0px;
+	bottom: 0px;
+	opacity: 0.5;
+	margin: 8px;
+	font-size: 22px;
+	z-index: 100000000;
 }
