--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ a:visited {
     top: 40%;
 }
 
+/* Use SVG for this later I think, just because our creep image is irregular size */
 #bigCreep {
     width: 256px;
     height: 256px;
